# i18n-format

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  build.bat  build.sh  readme.md
.github/workflows/: build.yaml
docs/: CMakeLists.txt  extra.css  layout.xml  overview.md
include/i18n-format/: base.h  i18n-format.h
src/: CMakeLists.txt  core.c  core.h  define.h  word2number.h
src/locale/zh_CN/: word2number.c  word2number.h  word2number_zh_CN.c  word2number_zh_CN.h
test/: CMakeLists.txt  main.c  test_macros.h  test_word2number.c  unit_test.c  unit_test.h
